# craftpp

./: CMakeLists.txt  README.md
craftpp/: CMakeLists.txt
craftpp/binary/: CMakeLists.txt  const_view.cpp  const_view.hpp  endian.hpp
craftpp/error/: CMakeLists.txt  code.cpp  code.hpp  error.cpp  error.hpp
craftpp/maybe/: maybe.hpp
craftpp/result/: reduce.hpp  result.hpp
craftpp/string/: CMakeLists.txt  string_view.hpp
craftpp/types/: tagged.hpp  unit.hpp
craftpp/variant/: CMakeLists.txt  overloaded.hpp
src/: CMakeLists.txt
src/error/: code.cpp  code.hpp  error.cpp
src/maybe/: CMakeLists.txt  maybe.hpp
src/result/: CMakeLists.txt  result.hpp  sugar.hpp
src/string/: string_view.hpp
src/types/: CMakeLists.txt  tagged.hpp
tests/: CMakeLists.txt  result_reduce_tests.cpp  result_result_tests.cpp
